...
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"> blank Task fragment</string>
    <string name="enter_your_username">Enter your userName</string>
    <string name="your_user_name" translatable="false"> username: %1$s</string>
    <string name="username">userName</string>
    <string name="lorem_ipsum_description_goes_here">Lorem Ipsum Description Goes Here</string>
    <string name="add_task">ADD TASK</string>
    <string name="all_task">ALL TASK</string>
    <string name="imageview">IMAGEVIEW</string>
    <string name="textview">TextView</string>
    <string name="textviewfragment">TextView</string>
    <string name="subject3">subject3</string>
    <string name="subject1">subject1</string>
...
