...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral90"
    tools:context=".Activites.MainActivity">

    <Button
        android:id="@+id/ADDTASK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewId"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/ALLTASKS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
