...
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-8dp"
        tools:layout_editor_absoluteY="-1dp" />

    <ImageView
        android:id="@+id/arrowImage"
        android:layout_width="61dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
...
